--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "use-clipboard-copy": "^0.2.0",
     "webfontloader": "^1.6.28"
   },
   "scripts": {
